# 26-R1-ARM-MCU2

./: .gitignore  .gitmodules  26-v1-r1-mcu2.ioc  CMakeLists.txt  MCU2-ARM.jdebug
Modules/BasicComponents/: CMakeLists.txt  README.md
Modules/BasicComponents/protocol/UartRxSync/: CMakeLists.txt  UartRxSync.hpp  cpkg.toml
Modules/BasicComponents/utils/: CMakeLists.txt  cpkg.toml  isr_lock.h  static_arena.hpp  utils.h
Modules/ChassisController/: README.md  diff
Modules/ChassisController/Chassis/: CMakeLists.txt
Modules/ChassisController/Controller/: Master.hpp  Slave.hpp  cpkg.toml
Modules/ChassisController/Core/: CMakeLists.txt  IChassis.cpp  IChassis.hpp
Modules/ChassisController/Localization/: CMakeLists.txt
Modules/ChassisController/Mecanum4/: CMakeLists.txt  Mecanum4.cpp  Mecanum4.hpp
Modules/ChassisController/Steering4/: CMakeLists.txt  Steering4.cpp  Steering4.hpp  SteeringWheel.cpp  SteeringWheel.hpp
Modules/MotorDrivers/: README.md
Modules/MotorDrivers/controllers/: motor_pos_controller.cpp  motor_vel_controller.cpp  motor_vel_controller.hpp
Modules/MotorDrivers/core/: motor_if.hpp
Modules/MotorDrivers/motors/: CMakeLists.txt
Modules/Sensors/: CMakeLists.txt
Modules/TrajectoryControl/: README.md
Modules/TrajectoryControl/MotorTrajectory/: CMakeLists.txt  motor_trajectory.hpp
Modules/VelocityProfile/: README.md
UserCode/: app.cpp  arm.cpp  arm.hpp  clamp.cpp  clamp.hpp  controller_receive.cpp  controller_receive.hpp  device.cpp  device.hpp  interboard_comm.cpp  interboard_comm.hpp  pump_ctrl.cpp  pump_ctrl.hpp
(+31 files in other folders)
